Alignnment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 .body {
     font-family: 'Open Sans', serif;
-}
-
-h1 {
-    font-size: 50px;
-    font-weight: 1000;
+    text-align: center;
 }
 
 body {
     background-color: #EDE7D9;
 }
+
+h1 {
+    font-size: 100px;
+    font-weight: 1000;
+}
+
 
 .page {
     width: 1500px;
@@ -21,7 +23,6 @@ body {
 
 .vis-container {
     width: 100%;
-    height: 500px;
 }
 
 .description h2,
@@ -30,11 +31,11 @@ h1 {
 }
 
 h2 {
-	font-size: 35px;
+	font-size: 50px;
 	color: black;
 	font-weight: bolder;
 	text-align: center;
-	font-family: 'Times New Roman', serif;
+    font-family: 'Open Sans', serif;
 	width: 550px;
 	padding-top: 10px;
 	padding-bottom: 10px;
